Quickly fix weird z-index issue.

--- a/src/index.css
+++ b/src/index.css
@@ -14,5 +14,6 @@
 
 [data-re-earthbar-panel-portal] {
   position: absolute;
+  z-index: 99999999;
   width: 100%;
 }
